# goiasscript-rust

./: Cargo.toml  README-from-goiasscript-js.md  README.md  acesso_teste  acesso_teste.rs  array_teste  array_teste.rs  classe_teste.rs  controle  controle.rs  demo_mini  demo_mini.rs  exemplo_completo  exemplo_completo.rs  exemplo_simplificado.rs  jogo_simples.rs  objeto_teste  objeto_teste.rs  ola  ola.rs  programa_avancado.rs  programa_simples  programa_simples.rs  rpg_aventura.rs  rpg_demo  rpg_demo.rs  rpg_mini.rs  rpg_simples.rs  rpg_simples_funcional.rs  simples  simples.rs  teste_simples  teste_simples.rs
examples/: acesso_teste.gs  array_teste.gs  classe_teste.gs  controle.gs  demo_mini.gs  exemplo_simplificado.gs  jogo_simples.gs  novo_exemplo_completo.gs  objeto_teste.gs  ola.gs  programa_avancado.gs  programa_simples.gs  rpg_aventura.gs  rpg_aventura_interativo.gs  rpg_demo.gs  rpg_mini.gs  rpg_simples.gs  rpg_simples_funcional.gs  simples.gs  teste_simples.gs
src/: ast.rs  errors.rs  goias_value.rs  keywords.rs  lexer.rs  main.rs  parser.rs  translator.rs
